--- a/epi_wiew/package.json
+++ b/epi_wiew/package.json
@@ -7,14 +7,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.3",
+    "bootstrap": "^5.2.3",
     "client-oauth2": "^4.3.3",
     "path": "^0.12.7",
     "querystring": "^0.2.1",
     "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
     "webpack": "^5.75.0"
   },
